Remove DropWizard. Does not support native images.  :: sigh ::
Mainline native image build